# Multi_Agent_Explainable_OE

./: .gitignore  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
CQs/: Video Game.csv
Dataset/CQs/: Infrastructure.csv  Vehicle Census.csv  Video Game.csv
Dataset/Generated Ontologies/: Gen_Infra.owl
Dataset/Results/Concept_label_matching/: results_concept_apar.txt
Framework/: README.md  agent_framework.py
Generated Ontologies/: Gen_VGO.owl
Gold Ontologies/: Censo.owl
Log files/: VCO_log.txt
Results/Concept_label_matching/: results_concept_vgo.txt
Results/Structural_Analysis/Vehicle_Census/: Gen_VCO.md
dataset/competency_questions/: VCO.json  VGO.json
dataset/generation_log/: Infra_log.txt  VGO_log.txt
dataset/result/Concept_label_matching/: results_concept_cso.txt
docs/: configuration.md  eval.md  index.md  install.md  output.md
evaluation/: README.md  eva_.py
evaluation/dataset/competency_questions/: infrastructure.json
evaluation/dataset/generated_ontology/: Gen_VCO.owl
evaluation/dataset/gold_standard_ontology/: Gold_Infra.owl
src/: README.md
src/evaluation/: eva_.py
src/generation/: agent_framework.py  cli.py
src/image/: maseo_framework.html
src/maseo/: batch.yaml  cli.py  config.py  config.yaml  model_factory.py  models.py  oops_validation.py  reasoner.py  run_batch.py  utils.py  workflow.py
src/maseo/.ipynb_checkpoints/: config-checkpoint.py  config-checkpoint.yaml  models-checkpoint.py  reasoner-checkpoint.py  workflow-checkpoint.py
src/maseo/agents/: __init__.py  logical_consistency_agent.py  (+3 more)
(+27 files in other folders)
