[project]
name = "maseo"
version = "0.1.0"
description = "A Multi-Agent System for Explainable Ontology Generation"
authors = [
    {name = "Clark"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "agno (>=2.6.4,<3.0.0)",
    "rdflib (>=7.6.0,<8.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "maseo", from = "src"}]
